<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="15dp"
        android:gravity="end"
        android:paddingTop="25dp"
        android:paddingEnd="25dp">

        <ImageView
            android:id="@+id/iv_sett"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_settings_black_24dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:gravity="start"
        android:paddingStart="25dp"
        android:paddingTop="25dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_premium"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/crownicon" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:gravity="center"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cd"
            android:text="@string/takeaselfie"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-50dp"
        android:gravity="top">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="75dp">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_gravity="top"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            card_view:cardBackgroundColor="@color/colorGray"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="15dp">

            <Button
                android:id="@+id/takePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@null"
                android:elevation="50dp"
                android:visibility="visible" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <cdflynn.android.library.checkview.CheckView
                            android:id="@+id/checkTakePhoto"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:padding="10dp"
                            app:checkView_strokeColor="@color/colorPrimary"
                            app:checkView_strokeWidth="10dp" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ly_beforePick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cameraicon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cdbold"
                            android:text="@string/take_photo">

                        </TextView>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_gravity="top"
            android:layout_marginStart="25dp"

            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            card_view:cardBackgroundColor="@color/colorGray"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="15dp">

            <Button
                android:id="@+id/bt_pickImageFromGallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@null"
                android:elevation="50dp"
                android:visibility="visible" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <cdflynn.android.library.checkview.CheckView
                            android:id="@+id/checkPickImage"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:padding="10dp"
                            app:checkView_strokeColor="@color/colorPrimary"
                            app:checkView_strokeWidth="10dp" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ly_beforePickGallery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_image_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cdbold"
                            android:text="@string/pick_image">

                        </TextView>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"

            >

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="@color/colorGray"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="5dp">

                <Button
                    android:id="@+id/processClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/button_state"
                    android:drawableLeft="@drawable/mainiconsmall"
                    android:drawablePadding="-30dp"
                    android:fontFamily="@font/cdbold"
                    android:padding="5dp"
                    android:paddingStart="15dp"
                    android:text="@string/proccess"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18dp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/adslayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:visibility="invisible">


            <LinearLayout
                android:id="@+id/adViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                >

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:adSize="SMART_BANNER"
                    app:adUnitId="ca-app-pub-2976879956297104/8681984427">

                </com.google.android.gms.ads.AdView>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />


    <RelativeLayout
        android:id="@+id/ly_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="50dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.9"
            android:background="@color/colorWhite"
            android:gravity="center">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/loadingLogo"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
